package PAI.dto.teacherCategory;

public record TeacherCategoryRequestDTO(
        String name
) {
}
