package PAI.dto.teacherCategory;

public record TeacherCategoryResponseDTO (
        String id,
        String name
){}
